@@ -1,5 +1,12 @@
 2006-05-11  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/bookmarks/ephy-bookmarks.c: (save_filter_local):
+
+	Don't crash when saving bookmarks in case the zeroconf browsing
+	failed.
+	
+2006-05-11  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/bookmarks/ephy-bookmarks.c: (add_to_favorites), (resolve_cb),
 	(browse_cb):
 
